<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/Jobb_Profil"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/jobb_profil"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Jobb_Type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:hint="@string/jobb_type"
        />

    <EditText
        android:id="@+id/timelonn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:hint="@string/timel_nn"
        />

    <Button
        android:id="@+id/tknapp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/lagre"
        android:textColor="@android:color/white" />
</LinearLayout>