<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/Jobb_Profil"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/jobb_profil"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/velg_jobb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/date"
        android:focusable="false"
        android:inputType="date"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/timeStart"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/start_time"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:inputType="time" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/timeSlutt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/end_time"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:inputType="time" />
    </android.support.v7.widget.LinearLayoutCompat>

    <Button
    android:id="@+id/tknapp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/colorAccent"
    android:text="@string/lagre"
    android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/viewTimer"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="hours:" />

    <TextView
        android:id="@+id/viewKr"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kr:" />

    <TextView
        android:id="@+id/viewGjenstar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Earned so far:" />
</LinearLayout>